# timesheet-automation

./: .env.example  .gitignore  CLAUDE.md
.claude/: settings.json
data/: clients.yaml  descriptions.yaml
mcp-server/: pyproject.toml
mcp-server/src/: cli.py  config.py  jira_client.py  server.py  timesheet.py
mcp-server/tests/: test_cli.py  test_jira_client.py  test_tempo_client.py  test_timesheet.py
skills/: timesheet.md
timesheet-automation/: CLAUDE.md
timesheet-automation/data/: clients.yaml
timesheet-automation/docs/superpowers/plans/: 2026-03-31-timesheet-automation.md
timesheet-automation/docs/superpowers/specs/: 2026-03-31-timesheet-automation-design.md
timesheet-automation/mcp-server/src/: config.py  server.py  tempo_client.py  timesheet.py
timesheet-automation/mcp-server/tests/: test_config.py  test_server.py
timesheet-automation/skills/: timesheet.md
